--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,10 @@ nav.navbar a.active::after {
   width: 64px;
   height: 64px;
   margin-bottom: 1rem;
+  object-fit: contain;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* User stories and case studies */
